--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
