Moved API validation tests to python unit tests

--- a/env-postgres.env
+++ b/env-postgres.env
@@ -5,3 +5,5 @@ POSTGRES_USER=wally
 POSTGRES_PASSWORD=test_pw
 POSTGRES_DB=wally
 DATABASE_URL=postgres://wally:test_pw@db:5432/wally
+# SQLite memory database
+TEST_DATABASE_URL=sqlite://
