--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -180,7 +180,7 @@ objects:
           - name: logging
             mountPath: /app/.log/
         - name: promtail
-          image: grafana/promtail:latest
+          image: grafana/promtail:v1.3.0
           args:
           - -config.file=/etc/promtail/promtail.yaml
           - -client.url=http://loki:3100/api/prom/push
