--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -79,3 +79,4 @@ alchemy-mock==0.4.1
 pyproj==2.4.2.post1
 git+https://github.com/woodcrafty/PyETo.git#egg=pyeto
 pandas==1.0.3
+starlette-exporter==0.2.0
