--- a/openshift/monitoring/loki.yaml
+++ b/openshift/monitoring/loki.yaml
@@ -121,7 +121,7 @@ objects:
           serviceAccountName: default
           containers:
             - name: ${LOKI_SERVICE_NAME}
-              image: "grafana/loki:latest"
+              image: "grafana/loki:v1.3.0"
               imagePullPolicy: Always
               args:
                 - "-config.file=/etc/loki/loki.yaml"            
@@ -169,8 +169,8 @@ objects:
           terminationGracePeriodSeconds: 30
           volumes:
             - name: config
-              secret:
-                secretName: ${LOKI_SERVICE_NAME}
+              configMap:
+                name: ${LOKI_SERVICE_NAME}
             - name: storage
               persistentVolumeClaim:
                 claimName: ${LOKI_SERVICE_NAME}
