--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-matomo": "^3.13.4-1",
     "vue-plotly": "^1.0.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.2.3",
