--- a/openshift/import-jobs/tippecanoe.cron.job.yaml
+++ b/openshift/import-jobs/tippecanoe.cron.job.yaml
@@ -32,6 +32,7 @@ objects:
         name: wally-cron-tiles-${JOB_NAME}
     spec:
       schedule: ${SCHEDULE_TIME}
+      concurrencyPolicy: "Forbid"
       jobTemplate:
         metadata:
           name: wally-cron-tiles-${JOB_NAME}
