--- a/openshift/import-jobs/wfs.cron.job.yaml
+++ b/openshift/import-jobs/wfs.cron.job.yaml
@@ -32,6 +32,8 @@ objects:
         name: wally-cron-download-${JOB_NAME}
     spec:
       schedule: ${SCHEDULE_TIME}
+      successfulJobsHistoryLimit: 1 
+      failedJobsHistoryLimit: 1
       concurrencyPolicy: "Forbid"
       jobTemplate:
         metadata:
