Add page title to browser

--- a/frontend/src/config/config.json
+++ b/frontend/src/config/config.json
@@ -16,5 +16,8 @@
     "isStaging": false,
     "isDevelopment": true,
     "debug": false
+  },
+  "app": {
+    "title": "Water Allocation - Province of British Columbia"
   }
 }
