Cleared up debugging code

--- a/frontend/src/config/config.json
+++ b/frontend/src/config/config.json
@@ -8,7 +8,7 @@
   "staging": {
     "isProduction":  false,
     "isStaging": true,
-    "isDevelopment": true,
+    "isDevelopment": false,
     "debug": true
   },
   "production": {
