--- a/frontend/src/config/config.json
+++ b/frontend/src/config/config.json
@@ -3,7 +3,8 @@
     "isProduction":  false,
     "isStaging": false,
     "isDevelopment": true,
-    "debug": true
+    "debug": true,
+    "enableAnalytics": false
   },
   "staging": {
     "isProduction":  false,
