--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,14 @@
     "@turf/centroid": "^6.0.2",
     "@turf/circle": "^6.0.1",
     "@turf/union": "^6.0.3",
+    "agentkeepalive": "^4.1.2",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "esri-leaflet": "^2.2.4",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "jspdf": "^1.5.3",
     "keycloak-js": "^6.0.1",
     "leaflet": "^1.5.1",
