Added forbidden page config

--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -89,6 +89,8 @@ objects:
                 - '--discovery-url'
                 - '$(DISCOVERY_URL)'
                 - '--enable-metrics'
+                - '--forbidden-page'
+                - /app/forbidden-page.html
               envFrom:
                 - secretRef:
                     name: gatekeeper-credentials
