Changed link text to 'contact us'

--- a/openshift/gatekeeper-config.yaml
+++ b/openshift/gatekeeper-config.yaml
@@ -158,7 +158,7 @@ data:
                 It looks like you need to be granted access.
             </p>
             <p>
-                Please <a href="mailto:Lindsay.Macfarlane@gov.bc.ca?subject=Access Request to WALLY">contact us for help</a>
+                Please <a href="mailto:Lindsay.Macfarlane@gov.bc.ca?subject=Access Request to WALLY">contact us</a> for help.
             </p>
         </div>
     </div>
