--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -91,6 +91,10 @@ objects:
                 - '--enable-metrics'
                 - '--forbidden-page'
                 - /app/forbidden-page.html
+                - '--enable-refresh-tokens'
+                - 'true'
+                - '--encryption-key'
+                - '$(ENCRYPTION_KEY)'
               envFrom:
                 - secretRef:
                     name: gatekeeper-credentials
