--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -251,7 +251,7 @@ requests:
         wells.[0].aquifer.aquifer_id:
           exists: true
   - name: Stream buffer data search (water_rights_licences)
-    url: "{{host}}/api/v1/stream/features?linear_feature_id=701707707&code=100-077501-955583-434180-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000&layer=water_rights_licences"
+    url: "{{host}}/api/v1/stream/features?buffer=50&code=100-077501-955583-455209-980096-594904-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000-000000&linear_feature_id=701722349&layer=water_rights_licences&full_upstream_area=true"
     method: get
     expect:
       status: 200
