Add app config .env files to configmap

--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 parameters:
 - name: NAME
   displayName: Name
-  description: The name assigned to all of the resources defined in this template.
+  description: The name (environment) assigned to all of the resources defined in this template.
   required: true
-  value: wally-test
+  value: test
 - name: HOST
   displayName: Host
   description: The hostname to deploy this template to.
@@ -226,6 +226,9 @@ objects:
         - name: promtail-config
           configMap:
             name: promtail-config
+        - name: wally-config
+          configMap:
+            name: wally-config
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         schedulerName: default-scheduler
