--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -54,6 +54,7 @@ pylint==2.3.1
 pyparsing==2.4.2
 pytest==5.0.1
 python-dateutil==2.8.0
+python-dotenv==0.14.0
 python-editor==1.0.4
 python-multipart==0.0.5
 pytz==2019.1
