--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -173,7 +173,7 @@ objects:
               cpu: 100m
               memory: 512Mi
             limits:
-              cpu: 500m
+              cpu: '1'
               memory: 2Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
