--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -81,3 +81,4 @@ pyproj==2.4.2.post1
 git+https://github.com/woodcrafty/PyETo.git#egg=pyeto
 pandas==1.0.3
 starlette-exporter==0.3.0
+xgboost==1.2.0
