--- a/openshift/wally-backend/wally-config.yaml
+++ b/openshift/wally-backend/wally-config.yaml
@@ -3,12 +3,15 @@ data:
   prod.env: |
     external_import=false
     external_import_types=
+    wally_model=false
   staging.env: |
     external_import=false
     external_import_types=
+    wally_model=true
   dev.env: |
     external_import=true
     external_import_types=csv, kml, geojson
+    wally_model=true
 kind: ConfigMap
 metadata:
   name: wally-config
