working basic excel sheets

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,8 @@
     "vue-plotly": "^1.0.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.2.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.16.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
