--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "@turf/buffer": "^5.1.5",
     "@turf/centroid": "^6.0.2",
     "@turf/circle": "^6.0.1",
-    "@turf/line-distance": "^4.7.3",
+    "@turf/length": "^6.0.2",
     "@turf/line-to-polygon": "^6.0.1",
     "@turf/union": "^6.0.3",
     "axios": "^0.19.0",
