timeout length attempt

--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -86,6 +86,8 @@ objects:
                 - '--enable-refresh-tokens=true'
                 - '--encryption-key=$(ENCRYPTION_KEY)'
                 - '--enable-metrics'
+                - '--server-write-timeout=30s'
+                - '--upstream-response-header-timeout=30s'
                 - '--forbidden-page'
                 - /app/forbidden-page.html
               envFrom:
