--- a/frontend/src/config/config.json
+++ b/frontend/src/config/config.json
@@ -4,7 +4,7 @@
     "isStaging": false,
     "isDevelopment": true,
     "debug": true,
-    "enableAnalytics": false
+    "enableAnalytics": true
   },
   "staging": {
     "isProduction":  false,
