--- a/openshift/backend.build.yaml
+++ b/openshift/backend.build.yaml
@@ -55,7 +55,7 @@ objects:
       dockerStrategy:
         from:
           kind: ImageStreamTag
-          name: python-38:1-41
+          name: python:3.7
           namespace: bfpeyx-tools
       type: Docker
     successfulBuildsHistoryLimit: 5
