--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mdi/font": "^4.4.95",
     "@sentry/browser": "^5.9.1",
     "@sentry/integrations": "^5.8.0",
+    "@storybook/preset-scss": "^1.0.3",
     "@tmcw/togeojson": "^4.2.0",
     "@turf/area": "^6.0.1",
     "@turf/bbox": "^6.0.1",
@@ -31,6 +32,7 @@
     "@turf/line-to-polygon": "^6.0.1",
     "@turf/union": "^6.0.3",
     "axios": "^0.19.0",
+    "css-loader": "^5.0.1",
     "csv2geojson": "^5.1.1",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
@@ -45,6 +47,7 @@
     "moment": "^2.24.0",
     "proj4": "^2.6.3",
     "shapefile": "^0.6.6",
+    "style-loader": "^2.0.0",
     "vue": "^2.6.10",
     "vue-matomo": "^3.13.4-1",
     "vue-plotly": "^1.0.1",
