--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -58,6 +58,7 @@ python-dotenv==0.14.0
 python-editor==1.0.4
 python-multipart==0.0.5
 pytz==2019.1
+regex==2020.11.13
 requests==2.22.0
 six==1.12.0
 Shapely==1.6.4.post2
