--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,11 +30,12 @@
     "@turf/length": "^6.0.2",
     "@turf/line-to-polygon": "^6.0.1",
     "@turf/union": "^6.0.3",
+    "acorn": "^8.0.5",
     "axios": "^0.21.1",
     "csv2geojson": "^5.1.1",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
-    "jspdf": "^1.5.3",
+    "jspdf": "^2.3.0",
     "keycloak-js": "^6.0.1",
     "leaflet": "^1.5.1",
     "lodash.debounce": "^4.0.8",
