--- a/openshift/database.deploy.yaml
+++ b/openshift/database.deploy.yaml
@@ -142,7 +142,7 @@ objects:
             value: 0.0.0.0:5432
           - name: PATRONI_RESTAPI_LISTEN
             value: 0.0.0.0:8008
-          image: docker-registry.default.svc:5000/${IMAGE_STREAM_NAMESPACE}/patroni-postgis:10-postgis2.5
+          image: docker-registry.default.svc:5000/${IMAGE_STREAM_NAMESPACE}/${IMAGE_STREAM_TAG}
           # Because we are using image reference to a tag, we need to always pull the image otherwise
           #   we end up with outdated/out-of-sync image depending on the node where it is running
           imagePullPolicy: Always
