--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ dnspython==1.16.0
 email-validator==1.0.4
 emails==0.5.15
 fastapi==0.58.1
+Fiona==1.8.18
 GeoAlchemy2==0.6.3
 geojson==2.4.1
 gunicorn==19.9.0
@@ -58,6 +59,7 @@ python-dotenv==0.14.0
 python-editor==1.0.4
 python-multipart==0.0.5
 pytz==2019.1
+rasterio==1.2.1
 requests==2.22.0
 six==1.12.0
 Shapely==1.6.4.post2
