--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   backend:
     build:
       context: ./backend
+      dockerfile: Dockerfile.dev
       args:
         env: dev
     networks:
