--- a/env-postgres.env
+++ b/env-postgres.env
@@ -1,5 +1,5 @@
 # local dev settings for docker-compose
-
+POSTGIS_GDAL_ENABLED_DRIVERS='GTiff PNG JPEG'
 POSTGRES_SERVER=db
 POSTGRES_USER=wally
 POSTGRES_PASSWORD=test_pw
