--- a/openshift/ocp4/backend.build.yaml
+++ b/openshift/ocp4/backend.build.yaml
@@ -56,7 +56,7 @@ objects:
         from:
           kind: ImageStreamTag
           name: python:3.7
-          namespace: bfpeyx-tools
+          namespace: d1b5d2-tools
       type: Docker
     successfulBuildsHistoryLimit: 5
     triggers:
