--- a/openshift/ocp4/backend.deploy.yaml
+++ b/openshift/ocp4/backend.deploy.yaml
@@ -14,7 +14,7 @@ parameters:
   displayName: Namespace
   description: The namespace to apply this template to.
   required: true
-  value: bfpeyx-test
+  value: d1b5d2-test
 - name: ENVIRONMENT
   displayName: Environment
   description: The environment that these template objects will run in (e.g. dev, test, prod)
@@ -223,7 +223,7 @@ objects:
           - name: wally-config
             mountPath: /app/.config/
         - name: promtail
-          image: image-registry.openshift-image-registry.svc:5000/bfpeyx-tools/promtail:v1.3.0
+          image: image-registry.openshift-image-registry.svc:5000/d1b5d2-tools/promtail:v1.3.0
           args:
           - -config.file=/etc/promtail/promtail.yaml
           - -client.url=http://loki:3100/api/prom/push
