--- a/openshift/ocp4/crunchy-postgres/postgres.deploy.yaml
+++ b/openshift/ocp4/crunchy-postgres/postgres.deploy.yaml
@@ -232,7 +232,7 @@ objects:
                     secretKeyRef:
                       key: app-db-name
                       name: wally-psql
-              image: " "
+              image: "image-registry.openshift-image-registry.svc:5000/d1b5d2-dev/crunchy-postgres-gis:centos8-13.2-3.0-4.6.2"
               imagePullPolicy: IfNotPresent
               livenessProbe:
                 failureThreshold: 3
@@ -290,15 +290,5 @@ objects:
                 name: ${DATABASE_SERVICE_NAME}-setupcfg
               name: ${DATABASE_SERVICE_NAME}-setupcfg
       triggers:
-        - imageChangeParams:
-            automatic: true
-            containerNames:
-              - postgresql
-            from:
-              kind: ImageStreamTag
-              name: ${IMAGE_STREAM_NAME}:${IMAGE_STREAM_VERSION}
-              namespace: ${IMAGE_STREAM_NAMESPACE}
-            lastTriggeredImage: ""
-          type: ImageChange
         - type: ConfigChange
     status: {}
